third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/transmute-ref-alignment-increase.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/transmute-ref-alignment-increase.rs:20:35
   |
20 | const INCREASE_ALIGNMENT: &AU16 = transmute_ref!(&[0u8; 2]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AlignOf<[u8; 2]>` (8 bits)
   = note: target type: `MaxAlignsOf<[u8; 2], AU16>` (16 bits)
   = note: this error originates in the macro `$crate::assert_align_gt_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
